5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1724_2526.log
== SUBMITION (2019-05-14 12:13:35) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	t = t + 1
	if(t < x):
		print(t)
		somax = somax + t
	elif(t < y):
		print(t)
		somay = somay + t
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.129014
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:13:36) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	t = t + 1
	if(t < x):
		print(t)
		somax = somax + t
	elif(t < y):
		print(t)
		somay = somay + t
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:14:12) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	t = t + 1
	if(t < x):
		print(t)
		somax = somax + t
	elif(t < y):
		print(t)
		somay = somay + t
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:14:30) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	t = t + 1
	if(t < x):
		print(t)
		somax = somax + t
	elif(t < y):
		print(t)
		somay = somay + t
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.15666
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:15:52) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
		
	elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:16:17) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
		elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.147728
-- ERROR:
  File "/home/codebench/codes/1724/2526/main.py", line 11
    elif(t < y):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:18) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
		elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
File "XXXX", line 11
    elif(t < y):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:29) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
	elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:17:09) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x and t < y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
	elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:17:50) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
	elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:18:12) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
	elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:19:10) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t <= x):
		print(t)
		t = t + 1
		somax = somax + t
	elif(t < y):
		print(t)
		t = t + 1
		somay = somay + t
		
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:19:49) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t <= x):
		
		t = t + 1
		somax = somax + t
	elif(t < y):
		
		t = t + 1
		somay = somay + t
		
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:20:48) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t % y == 0):
		t = t + 1
		somay = somay + t
		
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:21:33) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t < x and t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t < y and t % y == 0):
		t = t + 1
		somay = somay + t
		
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:21:51) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x and t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t < y and t % y == 0):
		t = t + 1
		somay = somay + t
		
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:22:38) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x and t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t < y and t % y == 0):
		t = t + 1
		somay = somay + t
print(somax)
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:22:55) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t < x and t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t < y and t % y == 0):
		t = t + 1
		somay = somay + t
		print(somax)
		print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:23:33) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < x or t < y ):
	if(t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t % y == 0):
		t = t + 1
		somay = somay + t
print(somax)
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:25:27) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t < y ):
	if(t % x == 0):
		t = t + 1
		somax = somax + t
	elif(t % y == 0):
		t = t + 1
		somay = somay + t
print(somax)
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:31:33) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
d1 = 0
somax = 0
somay = 0

while(t < y):
	t = t + 1
	if(t < x/2 and t%x== 0):
		d = d + 1
		somax = somax + d
	elif(t < y/2 and y % y == 0):
		d1 = d1 + 1
		somay = somay + d1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- OUTPUT:
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:31:50) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
d1 = 0
somax = 0
somay = 0

while(t < y):
	t = t + 1
	if(t < x/2 and t%x== 0):
		d = d + 1
		somax = somax + d
	elif(t < y/2 and y % y == 0):
		d1 = d1 + 1
		somay = somay + d1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- EXECUTION TIME:
0.497057
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
NAO AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
NAO AMIGOS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:34:11) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
d1 = 0
somax = 0
somay = 0

while(t <= x/2):
	t = t + 1
	if(t%x== 0):
		d = d + 1
		somax = somax + d
while(t <= y/2)
	if(t % y == 0):
		d1 = d1 + 1
		somay = somay + d1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
File "XXXX", line 14
    while(t <= y/2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:34:18) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
d1 = 0
somax = 0
somay = 0

while(t <= x/2):
	t = t + 1
	if(t%x== 0):
		d = d + 1
		somax = somax + d
while(t <= y/2):
	if(t % y == 0):
		d1 = d1 + 1
		somay = somay + d1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
File "XXXX", line 14
    while(t <= y/2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:35:26) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2):
	t = t + 1
	if(t % x== 0):
		d = d + 1
		somax = somax + d
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + d1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
File "XXXX", line 14
    while(t <= y/2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:37:32) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2):
	t = t + 1
	if(t % x== 0):
		d = d + 1
		somax = somax + t
		
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + g
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
File "XXXX", line 14
    while(t <= y/2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:38:13) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2):
	t = t + 1
	if(t % x== 0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
File "XXXX", line 14
    while(t <= y/2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:40:36) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t < n ):
	t = t + 1
	if(t % x== 0 and t != n ):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	if(g % y == 0 and g != y):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(t < n ):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:40:49) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t < x ):
	t = t + 1
	if(t % x== 0 and t != n ):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	if(g % y == 0 and g != y):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(t % x== 0 and t != n ):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:40:58) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t < x ):
	t = t + 1
	if(t % x== 0 and t != x ):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	if(g % y == 0 and g != y):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(t % x== 0 and t != n ):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:42:33) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(t % x ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- OUTPUT:
0
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:02) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(t % x ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- OUTPUT:
0
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:45:02) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(t % x ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- EXECUTION TIME:
0.561298
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
0
0
NAO AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
0
0
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
insira o numero:insira o numero:0
0
NAO AMIGOS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:06) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(t % x ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(g % y == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")

-- OUTPUT:
0
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:38) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(t % x ==0):
		d = d + 1
		somax = somax + t
print(somax)

-- OUTPUT:
0
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:46:11) 
-- CODE:
x = int(input("insira o numero:"))
#y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(t % x ==0):
		d = d + 1
		somax = somax + t
print(somax)

-- OUTPUT:
0
0
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:46:58) 
-- CODE:
x = int(input("insira o numero:"))
#y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(x % t ==0):
		d = d + 1
		somax = somax + t
print(somax)

-- OUTPUT:
2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:47:29) 
-- CODE:
x = int(input("insira o numero:"))
#y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(x % t ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(y % g == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    while(g <= y/2):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:47:43) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(x % t ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(y % g == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")


-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:47:51) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(x % t ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(y % g == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")


-- EXECUTION TIME:
0.501788
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:50:02) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t < x):
		print(t)
		somax = somax + t
		t = t + 1
	elif(t < y):
		print(t)
		somay = somay + t
		t = t + 1
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
997.724
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:51:02) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
somax = 0
somay = 0
while(t <= x or t <= y ):
	if(t <= x):
		print(t)
		t = t + 1
		somax = somax + t
	elif(t < y):
		print(t)
		t = t + 1
		somay = somay + t
		
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
1001.93
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:38:39) 
-- CODE:
x = int(input("insira o numero:"))
y = int(input("insira o numero:"))
t = 0
d = 0
somax = 0


while(t <= x/2 ):
	t = t + 1
	if(x % t ==0):
		d = d + 1
		somax = somax + t
print(somax)
g = 0		
d1 = 0
somay = 0
while(g <= y/2):
	g = g + 1
	if(y % g == 0):
		d1 = d1 + 1
		somay = somay + g
print(somay)
if(somax == y and somay == x):
	print("AMIGOS")
else:
	print( "NAO AMIGOS")


-- EXECUTION TIME:
0.147984
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
